--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,39 @@
 /* import the roboto fonts*/
-@import url(./fonts.css)
+@import url(./fonts.css);
+/* CSS variables*/
+@import url(./partials/_variables.css);
+
+/* start Navigation*/
+
+
+.header_area.main-menu.navbar.navbar-brand {
+    padding: 0 2rem 0 5rem;
+}
+
+
+.header_area.main-menu.navbar.navbar {
+    padding: 1rem 20rem;
+}
+
+.header_area.main-menu.navbar.nav-link {
+    font: normal 500 15px/2px var(--roboto);
+    text-transform: uppercase;
+    padding: 1.7rem;
+    color: var(--title-color);
+}
+
+.header_area.main-menu.navbar-nav.active a {
+    background: var(--gradient-color);
+    -webkit-backgorund-clip: text;
+    -webkit-text-fil-color: transparent;
+    background-clip: text;
+}
+
+.header_area.main-menu.navbar-nav.a:hover {
+    background: var(--gradient-color);
+    -webkit-backgorund-clip: text;
+    -webkit-text-fil-color: transparent;
+    background-clip: text;
+}
+
+/* end navigation*/
