--- a/css/style.css
+++ b/css/style.css
@@ -5,35 +5,34 @@
 
 /* start Navigation*/
 
-
-.header_area.main-menu.navbar.navbar-brand {
+.header_area .main-menu .navbar .navbar-brand {
     padding: 0 2rem 0 5rem;
 }
 
-
-.header_area.main-menu.navbar.navbar {
+.header_area .main-menu .navbar {
     padding: 1rem 20rem;
 }
 
-.header_area.main-menu.navbar.nav-link {
+.header_area .main-menu .nav-item .nav-link {
     font: normal 500 15px/2px var(--roboto);
     text-transform: uppercase;
     padding: 1.7rem;
     color: var(--title-color);
 }
 
-.header_area.main-menu.navbar-nav.active a {
+.header_area .main-menu .navbar-nav .active a {
     background: var(--gradient-color);
-    -webkit-backgorund-clip: text;
-    -webkit-text-fil-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     background-clip: text;
 }
 
-.header_area.main-menu.navbar-nav.a:hover {
+.header_area .main-menu .navbar-nav a:hover {
     background: var(--gradient-color);
-    -webkit-backgorund-clip: text;
-    -webkit-text-fil-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+
 
 /* end navigation*/
