--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 /* CSS variables*/
 @import url(./partials/_variables.css);
 
+/* global styling*/
+@import url(./partials/_global.css);
 /* start Navigation*/
 
 .header_area .main-menu .navbar .navbar-brand {
@@ -36,3 +38,35 @@
 
 
 /* end navigation*/
+
+/*  Banner area*/
+
+.site-main .site-banner .site-title h3 {
+    padding-top: 35%;
+    font-weight: 500;
+}
+
+.site-main .site-banner .site-title h3::after {
+    content: " ";
+    height: 2px;
+    width: 18vw;
+    background: black;
+    display: inline-block;
+    margin-left: 5%;
+    transform: translateY(-10px);
+}
+
+.site-main .site-banner .site-title h1 {
+    font-size: 5rem;
+}
+
+.site-main .site-banner .site-title h4 {
+    font-size: 1.5rem;
+}
+
+.site-main .site-banner .banner-image>img {
+    padding: 7rem 0;
+    width: 90rem;
+}
+
+/*  End Banner area*/
