--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,22 @@
 }
 
 /*  End Banner area*/
+
+
+/*  STart the about area*/
+
+.site-main .about-area {
+    padding: 8rem 5rem;
+}
+
+.site-main .about-area .about-title h2>span {
+    display: block;
+    font: normal bold 49px/ 60px var(--roboto);
+    letter-spacing: 21px;
+}
+
+.site-main .about-area .about-title .paragraph>p {
+    padding: .4rem 0;
+}
+
+/*  End the about area*/
