--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -63,3 +63,10 @@ p.para {
 .font-robot {
 	font-family: var(--roboto);
 }
+
+button:focus,
+button:active button:hover .btn:active,
+.btn.active {
+	outline: 0px !important;
+	box-shadow: none !important;
+}
